# flops-fit

./: .gitignore  README.md  flops-fit.sh  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-existing-pipeline-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.planning/phases/01-library-skeleton-and-model-interface/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-dataset-and-loss-interfaces/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-sweep-planning/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-training-engine/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/flops_fit/: __init__.py  analyzer.py  api.py  data.py  loss.py  model.py  model_factory.py  planner.py  result.py  sweep.py  trainer.py  visualizer.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_data.py  test_examples.py  test_loss.py  test_model.py  test_model_factory.py  test_pipeline.py  test_planner.py  test_result.py  test_sweep.py  test_trainer.py  test_visualizer.py
(+42 files in other folders)
