[project]
name = "flops-fit"
version = "0.1.0"
description = "Fit scaling laws and find compute-optimal model sizes using the IsoFLOPs method from Chinchilla"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "accelerate>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
ff-plan = "flops_fit.planner:main"
ff-train = "flops_fit.trainer:main"
ff-analyze = "flops_fit.analyzer:main"
ff-visualize = "flops_fit.visualizer:main"
# flops-fit wrapper is a bash script (./flops-fit)

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
